EZNIFI-156 Improved logging